@@ -91,12 +91,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-    * mod_dumpio: Correctly log large messages
-      PR 54179 
-      trunk patch: http://svn.apache.org/viewvc?view=revision&revision=1412278
-      2.4.x patch: http://people.apache.org/~jailletc36/backport_mod_dumpio.patch
-      +1: jailletc36, sf, druggeri
-     
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
